Pustigun added in latex.

--- a/benefitsOfHoney.tex
+++ b/benefitsOfHoney.tex
@@ -9,6 +9,17 @@
 \setotherlanguage{english}
 %\newfontfamily\englishfont[Scale=MatchLowercase]{Linux Biolinum O}
 \newfontfamily\bengalifont[Script=Bengali]{NikoshLightBAN}
+
+\title{মধুর বিস্ময়কর উপকারিতা}
+\author{মোঃ আল-হেলাল\\মোঃ রাশীদ আহমেদ\\ কম্পিউটার বিজ্ঞান ও প্রকৌশল\\ ঢাকা বিশ্ববিদ্যালয়}
+\date{\today}
+
 \begin{document}
-আমি বাংলার গান গাই।
+\maketitle
+
+প্রাচীন কাল থেকেই মধু খাদ্য ও ঔষধ উভয় হিসাবে ব্যবহার হয়ে আসছে। ইহা উপকারী উদ্ভিজ্জ যৌগ সমৃদ্ধ এবং অনেক স্বাস্থ্যগত সুবিধা প্রদান করে। মধু খুব স্বাস্থ্যকর, বিশেষভাবে যখন পরিশোধিত চিনির পরিবর্তে ইহা ব্যবহার করা হয়, যা ১০০% ক্যালোরি সমৃদ্ধ।\\
+এখানে মধুর শীর্ষ ১০ স্বাস্থ্য সুবিধা দেয়া হল -\\
+
+\section{মধুর পুষ্টিগুণ}
+মধু মৌমাছি দ্বারা তৈরি একটি মিষ্টি, গাঢ় তরল। মৌমাছি তাদের আশপাশের চিনি সমৃদ্ধ ফুল থেকে মধু সংগ্রহ করে। একবার মৌচাকে মধু রাখার পর তারা বারবার ঐ মধু খায় এবং পাকস্থলী থেকে মুখে উগরে আনার পর পুনরায় মৌচাকে রাখে। সর্বশেষ পণ্যটি হচ্ছে তরল মধু, যা মৌমাছির সংরক্ষিত খাদ্য হিসাবে সঞ্চিত থাকে। মৌমাছি কোন কোন ফুলে ঘুরেছে তার উপর ভিত্তি করে মধুর গন্ধ, রঙ ও স্বাদ বিভিন্ন ধরনের হয়। পুষ্টিগতভাবে, ১ টেবিল-চামচ (২১ গ্রাম) মধুতে ৬৪ ক্যালরি এবং ১৭ গ্রাম চিনিসহ ফ্রুক্টোজ, গ্লুকোজ, মল্টোজ এবং সুক্রোজ রয়েছে। এটাতে কার্যত কোন ফাইবার, চর্বি বা প্রোটিন নেই। এটিতে ভিটামিন এবং খনিজ কম থাকে কিন্তু কিছু উদ্ভিজ্জ যৌগ উচ্চ হারে থাকে। মধু উজ্জ্বল হয় তার বায়য়াক্টিভ উদ্ভিজ্জ যৌগ এবং য়ান্টিঅক্সিডেন্টসমূহের কারণে। গাঢ় ধরনের মধুতে এই সমস্ত যৌগ উচ্চ মাত্রায় থাকে।
 \end{document}
