--- a/benefitsOfHoney.tex
+++ b/benefitsOfHoney.tex
@@ -22,4 +22,14 @@
 
 \section{মধুর পুষ্টিগুণ}
 মধু মৌমাছি দ্বারা তৈরি একটি মিষ্টি, গাঢ় তরল। মৌমাছি তাদের আশপাশের চিনি সমৃদ্ধ ফুল থেকে মধু সংগ্রহ করে। একবার মৌচাকে মধু রাখার পর তারা বারবার ঐ মধু খায় এবং পাকস্থলী থেকে মুখে উগরে আনার পর পুনরায় মৌচাকে রাখে। সর্বশেষ পণ্যটি হচ্ছে তরল মধু, যা মৌমাছির সংরক্ষিত খাদ্য হিসাবে সঞ্চিত থাকে। মৌমাছি কোন কোন ফুলে ঘুরেছে তার উপর ভিত্তি করে মধুর গন্ধ, রঙ ও স্বাদ বিভিন্ন ধরনের হয়। পুষ্টিগতভাবে, ১ টেবিল-চামচ (২১ গ্রাম) মধুতে ৬৪ ক্যালরি এবং ১৭ গ্রাম চিনিসহ ফ্রুক্টোজ, গ্লুকোজ, মল্টোজ এবং সুক্রোজ রয়েছে। এটাতে কার্যত কোন ফাইবার, চর্বি বা প্রোটিন নেই। এটিতে ভিটামিন এবং খনিজ কম থাকে কিন্তু কিছু উদ্ভিজ্জ যৌগ উচ্চ হারে থাকে। মধু উজ্জ্বল হয় তার বায়য়াক্টিভ উদ্ভিজ্জ যৌগ এবং য়ান্টিঅক্সিডেন্টসমূহের কারণে। গাঢ় ধরনের মধুতে এই সমস্ত যৌগ উচ্চ মাত্রায় থাকে।
+
+%translation of the book
+মধু পরিমাণগত এবং অর্থনৈতিক দৃষ্টিকোণ থেকে মৌমাছি পালনের সবচেয়ে গুরুত্বপূর্ণ প্রাথমিক পণ্য। এটি প্রথম মৌ পণ্য যা মানবজাতি প্রাচীন কাল থেকে ব্যবহার করে আসছে। 
+%need to check
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+মধু ব্যবহারের ইতিহাস মানুষের ইতিহাসের সমান্তরাল এবং প্রায় প্রতিটি সংস্কৃতির প্রমাণ খাদ্য উৎস হিসাবে ব্যবহার করা যেতে পারে এবং ধর্মীয়, জাদু এবং চিকিত্সাগত অনুষ্ঠানগুলিতে নিযুক্ত একটি প্রতীক হিসেবে (কার্টল্যান্ড, 1970; ক্রেন, 1980 জাভেনপেরল, 1984) খুব সাম্প্রতিক পর্যন্ত এটির অনন্য অবস্থানের অন্যান্য কারণগুলির মধ্যে এটি একটি কৃতজ্ঞতা এবং শ্রদ্ধা, যা পৃথিবীর বেশিরভাগ অংশে মানুষের কাছে চিনির একমাত্র সংকীর্ণ রূপ। একই সাংস্কৃতিক সমৃদ্ধি অন্য পণ্যগুলিতে মধুর ব্যবহারগুলির সমানভাবে রঙিন বিভিন্ন ধরণের তৈরি করেছে (চিত্র 2.1 দেখুন)।
+"মধু হল ফুলের মধু থেকে উদ্ভিদের উদ্ভিদ বা উদ্ভিদের জীবন্ত অংশসমূহের উদ্ভিদ বা উদ্ভিদের জীবন্ত অংশে পোকামাকড়ের পোকামাকড়ের ক্ষত থেকে নির্গত প্রাকৃতিক মিষ্টি পদার্থ যা মধুচক্র সংগ্রহ করে, রূপান্তরিত করে এবং নির্দিষ্ট বস্তুর সাথে একত্রিত করে। , রান্নার এবং পরিপক্ব করার জন্য মধু কম্বারে রেখে দিন এবং ছেড়ে দিন। এই কোডেক্স অ্যালিমান্টিয়াসে (1989) মধুর সাধারণ সংজ্ঞা যা এই পণ্যের সব বাণিজ্যিকভাবে প্রয়োজনীয় বৈশিষ্ট্য বর্ণনা করা হয়। আগ্রহী পাঠককে অন্যান্য গ্রন্থেও উল্লেখ করা হয় যেমন "মধু, একটি ব্যাপক জরিপ" (ক্রেন, 1975)।
+
+এই বুলেটিনে মধু, অ্যাপিস মেলিফেরা দ্বারা উৎপাদিত মধুকে উল্লেখ না করা পর্যন্ত উল্লেখ করা হবে। অন্যান্য মধুযুদ্ধের প্রজাতি মধু তৈরি করে এবং অন্যান্য মৌমাছি এবং এমনকি ভেস্পগুলিও খাদ্যশস্য হিসাবে বিভিন্ন ধরণের হানি সংগ্রহ করে। অন্যান্য মৌমাছি থেকে মধু সম্পর্কে আরও বিস্তারিত বিভাগ 2.11 এ দেওয়া হয়েছে।
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{document}
